<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:padding="20dp"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommended" />

        <RadioButton
            android:id="@+id/sortAToZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_a_to_z" />

        <RadioButton
            android:id="@+id/sortZtoA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_z_to_a" />

        <RadioButton
            android:id="@+id/sortOldToNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_old_to_new" />

        <RadioButton
            android:id="@+id/sortNewToOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_new_to_old" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout></layout>